--- a/chrome-extension/popup-ui/login.html
+++ b/chrome-extension/popup-ui/login.html
@@ -30,7 +30,9 @@
       <button id="login-button" class="action-button primary">Log In</button>
     </div>
   </div>
-  
+
+  <!-- Add this line to load the error types script first -->
+  <script src="../shared/error-types.js"></script>
   <script src="api-client.js"></script>
   <script src="login.js"></script>
 </body>
